# Modern-Cpp-For-Computer-Vision

./: .gitignore  README.md
homework/homework1/task_2/: CMakeLists.txt  README.md.save
homework/homework_1/task_1/: wc
homework/homework_2/task1/src/: main.cpp
homework/homework_2/task_1/: CMakeLists.txt
homework/homework_2/task_2/: CMakeLists.txt
homework/homework_2/task_2/src/: task_2.cpp
homework/homework_3/: CMakeLists.txt  test.html
homework/homework_3/src/: html_writer.cpp  image_browser.cpp  main.cpp
homework/homework_5/: CMakeLists.txt
homework/homework_5/src/: convertDataset.cpp  main.cpp  serialize.cpp
homework/homework_5/tests/: CMakeLists.txt  sifts_internal.cpp  sifts_internal.hpp  test_convert_dataset.cpp
homework/homework_6/: CMakeLists.txt
homework/homework_6/include/: Image.hpp
homework/homework_6/src/: Image.cpp  Image.hpp  test_image.cpp
homework/homework_6/tests/: test_histogram.cpp
homework8/task_2/include/: IoStrategies.hpp  homework_8.h
homework8/task_2/src/: IoStrategy.cpp
homework_1/task_2/: CMakeLists.txt  build.sh  install.sh
homework_1/task_2/results/: main
homework_2/task1/: CMakeLists.txt
homework_2/task1/src/: task1.cpp
homework_2/task2/: CMakeLists.txt
homework_2/task2/src/: task_2.cpp
homework_3/: CMakeLists.txt
homework_3/src/: html_writer.cpp  image_browser.cpp  main.cpp
homework_4/: CMakeLists.txt
homework_4/include/: homework_4.h  named_vector.hpp
homework_4/src/: test_vector.cpp
homework_4/tests/: CMakeLists.txt  test_ipb_algorithm.cpp  test_named_vector.cpp
homework_5/: CMakeLists.txt
homework_5/include/: homework_5.h  serialize.hpp
homework_5/tests/: CMakeLists.txt  test_main.cpp  test_serialize.cpp  testing_test
homework_6/: CMakeLists.txt
homework_6/data/: lenna_downscaled.pgm  test.ascii.pgm
homework_6/io_tools/: io_tools.cpp  io_tools.hpp
homework_6/src/: Image.cpp
homework_6/tests/: CMakeLists.txt  test_histogram.cpp  test_homework6_test
homework_8/task_1/: CMakeLists.txt  test_stack_limit.sh
homework_8/task_1/src/: stack_limit.cpp
homework_8/task_2/: CMakeLists.txt
homework_8/task_2/include/: Image.hpp
homework_8/task_2/src/: Image.cpp  test_image.cpp
homework_8/task_2/tests/: CMakeLists.txt  test_from_png.cpp  test_from_ppm.cpp
